--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,24 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
-                   <source>1.8</source>
-                   <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
                </configuration>
            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
        </plugins>
   </build>
   <dependencies>
@@ -29,4 +43,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+      <snapshotRepository>
+          <id>regextest-snapshot-hosted</id>
+          <name>regextest-snapshot-hosted</name>
+          <url>http://192.168.0.70:8081/repository/regextest-snapshot-hosted/</url>
+      </snapshotRepository>
+  </distributionManagement>
 </project>
